--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "nest-next": "^10.1.0",
+    "nodemailer": "^6.9.16",
     "pdfmake": "^0.2.15",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.0",
