--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.8",
     "@nestjs/typeorm": "^10.0.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "multer": "^1.4.5-lts.1",
     "nest-next": "^10.1.0",
     "nodemailer": "^6.9.16",
     "pdfmake": "^0.2.15",
@@ -46,6 +47,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/pdfmake": "^0.2.9",
     "@types/supertest": "^6.0.0",
